--- a/app/src/main/res/layout/d_feed_item_image.xml
+++ b/app/src/main/res/layout/d_feed_item_image.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
