--- a/app/src/main/res/layout/i2_upload_content.xml
+++ b/app/src/main/res/layout/i2_upload_content.xml
@@ -2,19 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
-    android:padding="16dp">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- Grid for Images -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/profileGridRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:scrollbars="vertical" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/upload_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="24dp"
         android:text="Share Fun Upload you've recorded recently"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:textColor="@android:color/black"
-        android:paddingBottom="24dp"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/upload_button"
