--- a/app/src/main/res/layout/i_profile_postupload_gridimage.xml
+++ b/app/src/main/res/layout/i_profile_postupload_gridimage.xml
@@ -7,4 +7,4 @@
     android:contentDescription="Grid Image"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
-    android:scaleType="centerCrop" />
+    android:scaleType="fitCenter" />
