--- a/app/src/main/res/layout/i3_liked_content.xml
+++ b/app/src/main/res/layout/i3_liked_content.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <!-- Title -->
-    <TextView
-        android:id="@+id/likedTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Liked Contents"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <!-- Placeholder Text (to simulate content for now) -->
-    <TextView
-        android:id="@+id/likedContentText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Your liked content will appear here."
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/likedTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Grid for Images -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/likedContentRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:scrollbars="vertical" />
+
+    </LinearLayout>
+
+</LinearLayout>
