--- a/app/src/main/res/layout/i_profile_contents_gridimage.xml
+++ b/app/src/main/res/layout/i_profile_contents_gridimage.xml
@@ -3,6 +3,7 @@
     android:id="@+id/gridImageView"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_margin="1dp"
     android:clickable="true"
     android:contentDescription="Grid Image"
     android:focusable="true"
