--- a/app/src/main/res/layout/i_profile_contents_verticalgridview.xml
+++ b/app/src/main/res/layout/i_profile_contents_verticalgridview.xml
@@ -17,6 +17,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageButton
+            android:id="@+id/deletebutton"
+            android:layout_width="25dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/delete" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
