--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="pure_color">#B200FF</color>
+    <color name="Contrast">#48F6FF</color>
+    <color name="orange_complement">#FF8168</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
@@ -8,6 +11,7 @@
     <color name="light_gray">#D3D3D3</color>
     <color name="red">#FF0000</color>
     <color name="teal_700">#03A9F4</color>
+
 
 
 
