--- a/app/src/main/res/layout/c_signin.xml
+++ b/app/src/main/res/layout/c_signin.xml
@@ -202,7 +202,7 @@
             android:layout_height="60dp"
             android:backgroundTint="@color/pure_color"
             android:text="SIGN IN"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold" />
     </LinearLayout>
