--- a/app/src/main/res/layout/d1_feed.xml
+++ b/app/src/main/res/layout/d1_feed.xml
@@ -19,12 +19,13 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:fontFamily="@font/fugaz_one"
+            android:layout_width="275dp"
+            android:layout_height="54dp"
+            android:fontFamily="@font/inter_extrabold"
             android:gravity="center"
-            android:text="PHINDEE"
-            android:textSize="35sp"
+            android:text="Phindee"
+            android:textColor="@color/black"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -35,13 +36,14 @@
             android:id="@+id/textView9"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="#0B0101"
+            android:background="#FFFFFF"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout17"
             android:layout_width="66dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    app:srcCompat="@drawable/ic_placeholder" />
+                    app:srcCompat="@drawable/ic_placeholder_2" />
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -86,7 +88,7 @@
         android:id="@+id/feedrecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#D1CBCB"
+        android:background="#FFFFFF"
         android:clipToPadding="false"
         android:overScrollMode="ifContentScrolls"
         android:paddingTop="8dp"
@@ -103,7 +105,7 @@
         android:id="@+id/bottomBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#EEEEEE"
+        android:background="#FFFFFF"
         android:elevation="4dp"
         android:orientation="horizontal"
         android:padding="4dp"
@@ -152,7 +154,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/calendar" />
+                android:src="@drawable/calendar_1" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -203,7 +205,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/closet" />
+                android:src="@drawable/closet_1" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -228,7 +230,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/profile" />
+                android:src="@drawable/user_1" />
 
             <TextView
                 android:layout_width="wrap_content"
