--- a/app/src/main/res/layout/e1_calendar.xml
+++ b/app/src/main/res/layout/e1_calendar.xml
@@ -101,6 +101,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
+        android:outlineAmbientShadowColor="#1A1818"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -205,6 +206,7 @@
         android:layout_width="0dp"
         android:layout_height="350dp"
         android:background="@color/white"
+        android:outlineAmbientShadowColor="@color/pure_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -288,7 +290,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/home" />
+                android:src="@drawable/home_1" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -380,7 +382,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/profile" />
+                android:src="@drawable/user_1" />
 
             <TextView
                 android:layout_width="wrap_content"
