--- a/app/src/main/res/layout/i1_profile.xml
+++ b/app/src/main/res/layout/i1_profile.xml
@@ -283,7 +283,7 @@
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/home" />
+                    android:src="@drawable/home_1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -306,7 +306,7 @@
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/calendar" />
+                    android:src="@drawable/calendar_1" />
 
                 <TextView
                     android:layout_width="wrap_content"
