--- a/app/src/main/res/layout/i_newpostupload.xml
+++ b/app/src/main/res/layout/i_newpostupload.xml
@@ -45,7 +45,7 @@
             android:layout_marginEnd="10dp"
             android:gravity="center|top"
             android:text="Save"
-            android:textColor="@color/teal_700"
+            android:textColor="@color/pure_color"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
