--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -6,6 +6,7 @@
         <item>@font/archivo_black</item>
         <item>@font/blaka_hollow</item>
         <item>@font/fugaz_one</item>
+        <item>@font/inter</item>
         <item>@font/inter_extrabold</item>
         <item>@font/lato_bold</item>
         <item>@font/lato_thin</item>
