--- a/app/src/main/res/drawable/calendar_outside_roundcorner.xml
+++ b/app/src/main/res/drawable/calendar_outside_roundcorner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D3D3D3"/> <!-- Change the color here -->
+    <solid android:color="#EFD9FF"/> <!-- Change the color here -->
     <corners
         android:bottomLeftRadius="16dp"
         android:bottomRightRadius="16dp" />  <!-- Adjust the radius for rounded corners -->
