--- a/app/src/main/res/layout/d1_feed.xml
+++ b/app/src/main/res/layout/d1_feed.xml
@@ -105,7 +105,7 @@
         android:id="@+id/bottomBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="@color/nav"
         android:elevation="4dp"
         android:orientation="horizontal"
         android:padding="4dp"
