--- a/app/src/main/res/layout/e1_calendar.xml
+++ b/app/src/main/res/layout/e1_calendar.xml
@@ -266,7 +266,7 @@
         android:id="@+id/bottomBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#EEEEEE"
+        android:background="@color/nav"
         android:orientation="horizontal"
         android:padding="4dp"
         android:weightSum="5"
