--- a/app/src/main/res/layout/e3_calendar_item_event.xml
+++ b/app/src/main/res/layout/e3_calendar_item_event.xml
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="More"
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@color/pure_color"
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </LinearLayout>
