--- a/app/src/main/res/layout/i1_profile.xml
+++ b/app/src/main/res/layout/i1_profile.xml
@@ -265,7 +265,7 @@
             android:id="@+id/bottomBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#EEEEEE"
+            android:background="#80F7C4FF"
             android:orientation="horizontal"
             android:padding="6dp">
 
@@ -375,7 +375,7 @@
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/profile" />
+                    android:src="@drawable/user_2" />
 
                 <TextView
                     android:layout_width="wrap_content"
