--- a/app/src/main/res/layout/d2_feed_item_post.xml
+++ b/app/src/main/res/layout/d2_feed_item_post.xml
@@ -122,7 +122,7 @@
         android:layout_margin="10dp"
         android:gravity="center"
         android:text="1/5"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/pink"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/post_Pic"
