--- a/app/src/main/res/layout/e1_calendar.xml
+++ b/app/src/main/res/layout/e1_calendar.xml
@@ -42,7 +42,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black"
+            android:background="@color/gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -313,7 +313,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/calendar" />
+                android:src="@drawable/calendar_2" />
 
             <TextView
                 android:layout_width="wrap_content"
