--- a/app/src/main/res/layout/i_newpostupload.xml
+++ b/app/src/main/res/layout/i_newpostupload.xml
@@ -120,7 +120,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gallery"
-            app:tint="@color/teal_700" />
+            app:tint="@color/pure_color" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
